--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "xlsx": "^0.18.5",
-    "react-toastify": "^11.0.5",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
@@ -30,7 +31,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
+    "eslint": "^9.23.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
