--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "xlsx": "^0.18.5",
-    "react-toastify": "^11.0.5",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
