--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
