--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-daterangepicker": "^8.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
