--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
     "react-select": "^5.10.1",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.0",
     "xlsx": "^0.18.5",
