--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.4.0",
     "react-select": "^5.10.1",
     "react-time-picker": "^7.0.0",
