--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^4.1.3",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "libphonenumber-js": "^1.12.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^19.0.0",
