--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.5.0",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.4.0",
