--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dating",
+  "name": "sgivs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,7 +24,6 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-infinite-scroller": "^1.2.6",
     "react-loading-skeleton": "^3.5.0",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.4.0",
